isssue: Support milestone changing history and notification

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3082,6 +3082,9 @@ label.inline-list {
                     background-color: #FFCCBC;
                     color: #F4511E;
                 }
+                &.milestone-changed {
+                    background-color: #0088cc;
+                }
              }
 
              em { font-size:12px; color:#7F8C8D; margin-right:5px;}
