index: Show more notification body contents at index page

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1172,12 +1172,7 @@
 
                             &.nowrap {
                                 min-height:20px;
-                                height:20px;
-                                .message {
-                                    text-overflow: ellipsis;
-                                    white-space: nowrap;
-                                    overflow: hidden;
-                                }
+                                max-height:200px;
                             }
                         }
                     }
