ui: Make list sorting filter ui more distinguishable

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2087,7 +2087,12 @@ label.inline-list {
     }
     .filters {
         color:#666;
-        float: right; margin-top:5px;
+        float: right;
+        margin-top:5px;
+        border: 1px solid #ddd;
+        border-radius: 3px;
+        padding: 5px 10px;
+
         .filter {
             margin-right:10px;
             &.active { font-weight:bold; color:@primary; }
